[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

[workspace]

members = [
    "day01"
]

[[bin]]
name = "day01"
path = "day01/src/main.rs"

[[bin]]
name = "day02"
path = "day02/src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "*"
