[workspace]
members = [
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Chris Janaqi"]
description = "Advent of Code 2023 solutions in rust"
edition = "2021"

[workspace.dependencies]
anyhow = "*"
