[workspace]
members = [
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day09",
    "day10",
    "day11",
    # "day12",
    # "day13",
    # "day14",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Chris Janaqi"]
description = "Advent of Code 2024 solutions in rust"
edition = "2021"

[workspace.dependencies]
anyhow = "*"
itertools = "*"
glam = "*"
