[workspace]
resolver = "3"
members = [ "common","day01", "day02", "day03", "day04", "day05", "day06"]

[workspace.package]
version = "0.1.0"
authors = ["Chris Janaqi"]
description = "Advent of Code 2025 solutions in rust"
edition = "2021"

[workspace.dependencies]
anyhow = "*"
regex = "*"
itertools = "*"
glam = "*"
